# ethercat_soem_linuxcnc

./: README.md
sample/: aliastool.c
sample/ebox/: ebox.c
sample/eepromtool/: CMakeLists.txt  eepromtool.c
sample/firm_update/: firm_update.c
sample/red_test/: CMakeLists.txt  red_test.c
sample/simple_test/: CMakeLists.txt  simple_test.c
sample/slaveinfo/: CMakeLists.txt  slaveinfo.c
soem_linuxcnc_embedded/: CMakeLists.txt  soem_linuxcnc.c  soem_linuxcnc.comp  soem_linuxcnc_embedded.c  test.c
soem_linuxcnc_embedded/include/: soem_linuxcnc.h
soem_linuxcnc_embedded/include/soem/: ethercat.h  ethercatconfig.h  ethercatconfiglist.h  ethercatmain.h  ethercatprint.h  ethercattype.h  osal.h  osal_defs.h
soem_linuxcnc_embedded/puma_files/: README  autosave.halscope  hiep.ngc  puma.ini  puma.tbl  puma.var  puma.xml  puma560.ini  puma560_postgui.hal  puma560_sim_6.hal  puma_postgui.hal  puma_sim_6.hal
